--- a/stylesheets/photography.css
+++ b/stylesheets/photography.css
@@ -44,9 +44,7 @@
   bottom: 0;
   width: 100%;
 }
-#events h3{
 
-}
 #portraits{
 
 }
